feat: Add OpenAI and Claude AI client