@@ -1,31 +1,31 @@
 package com.teng.app.gastosai.service;
 
-import com.teng.app.gastosai.ai.OpenAiSqlGenerator;
+import com.teng.app.gastosai.ai.SqlGenerator;
 import com.teng.app.gastosai.ai.SqlGuard;
 import com.teng.app.gastosai.dto.AiQueryResponse;
+import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Service;
 
+import java.math.BigDecimal;
+import java.math.RoundingMode;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
 @Service
+@RequiredArgsConstructor
 public class AiQueryService {
 
 	private static final Logger log = LoggerFactory.getLogger(AiQueryService.class);
 
-	private final OpenAiSqlGenerator openAiSqlGenerator;
+	private final SqlGenerator sqlGenerator;
 	private final JdbcTemplate jdbcTemplate;
 
-	public AiQueryService(OpenAiSqlGenerator openAiSqlGenerator, JdbcTemplate jdbcTemplate) {
-		this.openAiSqlGenerator = openAiSqlGenerator;
-		this.jdbcTemplate = jdbcTemplate;
-	}
-
 	public AiQueryResponse runNaturalLanguageQuery(String question) {
-		String rawSql = openAiSqlGenerator.generateSql(question);
+		String rawSql = sqlGenerator.generateSql(question);
 		String sql = SqlGuard.validateAndNormalize(rawSql);
 		log.info("AI-generated SQL (validated): {}", sql);
 
@@ -38,11 +38,25 @@ public class AiQueryService {
 			return null;
 		}
 		if (rows.size() == 1) {
-			Map<String, Object> row = rows.get(0);
+			Map<String, Object> row = rows.getFirst();
 			if (row.size() == 1) {
-				return row.values().iterator().next();
+				Object value = row.values().iterator().next();
+				return formatValue(value);
 			}
 		}
-		return rows;
+		return rows.stream()
+				.map(row -> {
+					Map<String, Object> formattedRow = new HashMap<>();
+					row.forEach((key, value) -> formattedRow.put(key, formatValue(value)));
+					return formattedRow;
+				})
+				.toList();
+	}
+
+	private static Object formatValue(Object value) {
+		if (value instanceof BigDecimal newValue) {
+			return newValue.setScale(2, RoundingMode.HALF_UP);
+		}
+		return value;
 	}
 }
